...
                }
            }
        },
        confirmButton = {
            Button(onClick = {
                if (label.text.isBlank()) {
                    erro = "Informe o label do campo"
                    return@Button
                }
                if ((tipo == "SELECAO_UNICA" || tipo == "MULTIPLA_ESCOLHA") && opcoes.text.isBlank()) {
                    erro = "Informe as opções"
                    return@Button
                }
...
